--- a/index.html
+++ b/index.html
@@ -114,121 +114,21 @@
             </nav>
         </div>
     </header>
-		<!--Section End Here-->
-		<!--  Main Banner Start Here-->
-		<div class="main-banner banner_up">
-			<div id="rev_slider_34_1_wrapper" class="rev_slider_wrapper" data-alias="news-gallery34">
-				<!-- START REVOLUTION SLIDER 5.0.7 fullwidth mode -->
-				<div id="rev_slider_34_1" class="rev_slider" data-version="5.0.7">
-					<ul>
-						<!-- SLIDE  -->
-						<li data-index="rs-129"  >
-							<!-- MAIN IMAGE -->
-							<img src="assets/images/banner/slider1.jpg"  alt=""  class="rev-slidebg" >
-							<!-- LAYERS -->
-							<!-- LAYER NR. 2 -->
-							<div class="tp-caption Newspaper-Title tp-resizeme "
-							id="slide-129-layer-1"
-							data-x="['left','left','left','left']" data-hoffset="['100','50','50','30']"
-							data-y="['top','top','top','center']" data-voffset="['165','135','105','0']"
-							data-fontsize="['50','50','50','30']"
-							data-lineheight="['55','55','55','35']"
-							data-width="['600','600','600','420']"
-							data-height="none"
-							data-whitespace="normal"
-							data-transform_idle="o:1;"
-							data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-							data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;"
-							data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-							data-mask_out="x:0;y:0;s:inherit;e:inherit;"
-							data-start="1000"
-							data-splitin="none"
-							data-splitout="none"
-							data-responsive_offset="on" >
-								<div class="banner-text">
-									<span class="sub-text">best websolution</span>
-									<h2>We build your <span>dreams</span> and <span>Finance</span></h2>
-									<p>
-										Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever.
-									</p>
-									<a class="btn-text" href="about_us.html"> read more</a>
-								</div>
-							</div>
-						</li>
-						<!-- SLIDE  -->
-						<li data-index="rs-130" data-title="" data-description="">
-							<!-- MAIN IMAGE -->
-							<img src="assets/images/banner/slider2.jpg"  alt=""   class="rev-slidebg">
-							<!-- LAYERS -->
-							<!-- LAYER NR. 2 -->
-							<div class="tp-caption Newspaper-Title   tp-resizeme "
-							id="slide-130-layer-1"
-							data-x="['left','left','left','left']" data-hoffset="['100','50','50','30']"
-							data-y="['top','top','top','center']" data-voffset="['165','135','105','0']"
-							data-fontsize="['50','50','50','30']"
-							data-lineheight="['55','55','55','35']"
-							data-width="['600','600','600','420']"
-							data-height="none"
-							data-whitespace="normal"
-							data-transform_idle="o:1;"
-							data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-							data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;"
-							data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-							data-mask_out="x:0;y:0;s:inherit;e:inherit;"
-							data-start="1000"
-							data-splitin="none"
-							data-splitout="none"
-							data-responsive_offset="on">
-								<div class="banner-text">
-									<span class="sub-text">best websolution</span>
-									<h2>We build your <span>dreams</span> and <span>Finance</span></h2>
-									<p>
-										Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever.
-									</p>
-									<a class="btn-text" href="#"> read more</a>
-								</div>
-							</div>
-						</li>
-						<!-- SLIDE  -->
-						<li data-index="rs-131">
-							<!-- MAIN IMAGE -->
-							<img src="assets/images/banner/slider3.jpg"  alt=""   class="rev-slidebg " >
-							<!-- LAYERS -->
-							<!-- LAYER NR. 2 -->
-							<div class="tp-caption Newspaper-Title   tp-resizeme "
-							id="slide-131-layer-1"
-							data-x="['left','left','left','left']" data-hoffset="['100','50','50','30']"
-							data-y="['top','top','top','center']" data-voffset="['165','135','105','0']"
-							data-fontsize="['50','50','50','30']"
-							data-lineheight="['55','55','55','35']"
-							data-width="['600','600','600','420']"
-							data-height="none"
-							data-whitespace="normal"
-							data-transform_idle="o:1;"
-							data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-							data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;"
-							data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-							data-mask_out="x:0;y:0;s:inherit;e:inherit;"
-							data-start="1000"
-							data-splitin="none"
-							data-splitout="none"
-							data-responsive_offset="on">
-								<div class="banner-text">
-									<span class="sub-text">best websolution</span>
-									<h2>We build your <span>dreams</span> and <span>Finance</span></h2>
-									<p>
-										Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever.
-									</p>
-									<a class="btn-text" href="about_us.html"> read more</a>
-								</div>
-							</div>
-						</li>
-						<!-- SLIDE  -->
-					</ul>
-					<div class="tp-bannertimer tp-bottom"></div>
-				</div>
-			</div>
-		</div>
+    <!--Header section end-->
+
+    <!--  Main Banner Start -->
+    <div class="main-banner banner_up">
+        <div id="rev_slider_34_1_wrapper" class="rev_slider_wrapper" data-alias="news-gallery34">
+            <div id="rev_slider_34_1" class="rev_slider" data-version="5.0.7">
+                <ul>
+                    <li data-index="rs-129"  >
+                        <img src="assets/images/rvm-associates.webp"  alt=""  class="rev-slidebg" >
+                    </li>
+                </ul>
+                <div class="tp-bannertimer tp-bottom"></div>
+            </div>
+        </div>
+    </div>
 		<!--  Main Banner End Here-->
 		<!-- About Us-->
 		<div class="about-section padding ptb-xs-60">
