--- a/index.html
+++ b/index.html
@@ -116,23 +116,7 @@
     </header>
     <!--Header section end-->
 
-    <!--  Main Banner Start -->
-    <div class="main-banner banner_up">
-        <div id="rev_slider_34_1_wrapper" class="rev_slider_wrapper" data-alias="news-gallery34">
-            <div id="rev_slider_34_1" class="rev_slider" data-version="5.0.7">
-                <ul>
-                    <li data-index="rs-129"  >
-                        <img src="assets/images/rvm-associates.webp"  alt=""  class="rev-slidebg" >
-                    </li>
-                </ul>
-                <div class="tp-bannertimer tp-bottom"></div>
-            </div>
-        </div>
-    </div>
-    <!--  Main Banner End -->
-
-    <!-- About Us-->
-    <div class="about-section padding ptb-xs-60">
+    <div id="about-section" class="padding pt-xs-60">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-12">
