--- a/index.html
+++ b/index.html
@@ -119,48 +119,63 @@
     <div id="about-section" class="padding pt-xs-60">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 col-sm-12">
-                    <div class="row">
-                        <div class="col-lg-5 col-lg-push-7 col-md-6 col-md-push-6 mb-xs-30 mb-sm-30">
-                            <div class="heading-block top-padding">
-                                <h2><span>Welcome</span> Our Company </h2>
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-lg-pull-5 col-md-6 col-md-pull-6">
-                            <figure>
-                                <img alt="" src="assets/images/about-3.jpg">
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-5">
-                            <figure>
-                                <img alt="" src="assets/images/about-img1.jpg">
-                            </figure>
-                        </div>
-                        <div class="col-sm-7">
-                            <figure>
-                                <img alt="" src="assets/images/about-img.jpg">
-                            </figure>
-                        </div>
+                <div class="col-sm-12">
+                    <div class="heading-box pb-30">
+                        <h2><span>Who</span> We Are</h2>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="top-space">
+            </div>
+            <div class="row">
+               <div class="col-sm-6 pb-xs-30">
+                    <div class="text-content">
                         <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
-                        </p>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
+                            With the blessing of our parents and immense support of our well-wisher inspired the foundation of RVM & Associates in February 2017. With the constant support from our client and within short span of time we took a step ahead to open another office at Ahmedabad in August 2018.
                         </p>
                     </div>
+                    <h4>The firm has two partners namely :</h4>
+                    <ul>
+                        <li>
+                            Dhaval Rachchh (M.Com, Inter CA)
+                        </li>
+                        <li>
+                            Jenil Vithalani (B.com, Inter CA)
+                        </li>
+                    </ul>
+                    <div class="text-content mt-25">
+                        <p>
+                            Both the partners are well qualified and quiet knowledgeable and experienced in the field of Accountancy, Taxation & Finance.
+                        </p>
+                        <p>
+                            The aim of our firm is to provide valuable services to clients and give constant support to them.
+                        </p>
+                        <p>
+                            We have Chartered Accounts, Company Secretary, Advocates and many more Professionals in our team.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <img class="img-responsive" src="assets/images/rvm-associates.webp" alt="Photo">
                 </div>
             </div>
         </div>
     </div>
-    <!-- Services Section -->
 
-    <!--planing wrapper start-->
+    <!--Availablity Section start-->
+    <section class="available_wrap__block mb-45">
+        <div class="available_content__block text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        <h2>Testimonials</h2>
+                        <p> "Priority of our firm is to fulfil all the requirements of the client." - RVM & Associates
+
+                        </p> </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Availablity Section end-->
+
     <section class="plaing_wrap__block padding ptb-xs-60">
         <div class="container">
             <div class="row pb-30 text-center">
