Practice area add

--- a/index.html
+++ b/index.html
@@ -176,208 +176,127 @@
     </section>
     <!--Availablity Section end-->
 
+    <!--Practice Areas wrapper start-->
     <section class="plaing_wrap__block padding ptb-xs-60">
         <div class="container">
             <div class="row pb-30 text-center">
                 <div class="col-sm-12 mb-20">
-                    <h2><span>Our</span> Services</h2>
+                    <h2><span>Practice</span> Areas</h2>
                     <span class="b-line"></span>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="single_plan__block plane_bg__block mb-30">
+                    <div class="single_plan__block  mb-30">
                         <div class="plan-content-box">
-                            <h3>Financial Planning</h3>
+                            <h3>Direct Tax</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim aquis
+                                Our aim is to plan well regarding the taxation and provide the hassle-free formulation to the clients with all the laws and amendments applicable
                             </p>
-                            <a href="#" class="more_btn__block">More <i class="fa fa-angle-right"></i></a>
+                            <p>
+                                We are providing the services for :
+                            </p>
+                            <ul>
+                                <li>Tax planning</li>
+                                <li>
+                                    Income Tax Compliance
+                                    <ul>
+                                        <li>Income Tax Return</li>
+                                        <li>TDS/TCS Return</li>
+                                        <li>Filing of form 15CA/CB</li>
+                                        <li>Lower TDS Certificate</li>
+                                        <li>Timely Response to Income Tax Authorities</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Other Income Tax Related Compliance
+                                    <ul>
+                                        <li>Application of PAN​</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="single_plan__block plane_bg__block blue__block mb-30">
+                    <div class="single_plan__block  mb-30">
                         <div class="plan-content-box">
-                            <h3>TAX Solution</h3>
+                            <h3>Indirect Tax</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim aquis
+                                India is going through the biggest Tax reform in its history with application of GST. Introduction of Goods & Service Tax (GST) majority of the Indirect Taxes submerged into one Tax.
                             </p>
-                            <a href="#" class="more_btn__block">More <i class="fa fa-angle-right"></i></a>
+                            <p>
+                                We are providing the following services :
+                            </p>
+                            <ul>
+                                <li>Registration</li>
+                                <li>Filling of Periodical Returns</li>
+                                <li>Surrender cum Cancellation of GSTIN</li>
+                                <li>Providing Opinions on Technical Matters</li>
+                                <li>All Other GST Related Compliance</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="single_plan__block plane_bg__block blue__block mb-xs-30 mb-sm-30">
+                    <div class="single_plan__block  mb-30">
                         <div class="plan-content-box">
-                            <h3>Education Loan</h3>
+                            <h3>Bookkeeping - Daily Accounts</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim aquis
+                                We understand that bookkeeping is the corner stone of every entities financial health and that accuracy matters.
                             </p>
-                            <a href="#" class="more_btn__block">More <i class="fa fa-angle-right"></i></a>
+                            <ul>
+                                <li>Accounting on Day to Day Basis</li>
+                                <li>Framing of Accounts as per Accounting Policies for Clients</li>
+                                <li>Supervision of Accounts on Timely Basis</li>
+                                <li>Finalization of Books of Accounts</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="single_plan__block plane_bg__block">
+                    <div class="single_plan__block  mb-30">
                         <div class="plan-content-box">
-                            <h3>Business Loan</h3>
+                            <h3>Banking & Finance</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim aquis
+                                Initial capital funding is the basic necessity for the one who wants to grow in terms of business or who is looking for the investments in various fields.
                             </p>
-                            <a href="#" class="more_btn__block">More <i class="fa fa-angle-right"></i></a>
+                            <p>
+                                We are providing the services for :
+                            </p>
+                            <ul>
+                                <li>Business Loan</li>
+                                <li>Mortage Loan</li>
+                                <li>Machinary Loan</li>
+                                <li>Cash Credit or Bank Overdraft Facality</li>
+                                <li>Home Loan</li>
+                                <li>Subsidy for the Above Mentioned Loans</li>
+                            </ul>
+                            <p>
+                                We have valuable relation with representative of leading banks and financial institution to avail affordable financial facilities for our clients.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="single_plan__block  mb-30">
+                        <div class="plan-content-box" style="height: 245px;">
+                            <h3>Other Services</h3>
+                            <p>
+                                Apart from all of the above we are also providing the below services :
+                            </p>
+                            <ul>
+                                <li>Digital Signature</li>
+                                <li>Formation of Company or Partnership  Firm</li>
+                                <li>ROC Work</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--planing wrapper end-->
-
-    <!--Our Progress Start-->
-    <section class="progress_wrap__block padding ptb-xs-60">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section_title__block text-center mb-30">
-                        <h2>Our Process</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="single_progress__block mt-30">
-                        <span>01</span>
-                        <h4>Current Status</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, coctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="single_progress__block mt-30">
-                        <span>02</span>
-                        <h4>Develop Goals</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, coctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="single_progress__block mt-30">
-                        <span>03</span>
-                        <h4>Anilysis</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, coctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="single_progress__block mt-30">
-                        <span>04</span>
-                        <h4>Recommendation</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, coctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--Our Progress End-->
-
-    <!-- Work Section -->
-    <section id="work" class="padding ptb-xs-60 gray-bg">
-        <div class="container">
-            <div class="row pb-30 text-center">
-                <div class="col-sm-12 mb-20">
-                    <h2><span>Our</span> Work</h2>
-                    <span class="b-line"></span>
-                </div>
-            </div>
-            <!-- work Filter -->
-            <div class="row">
-                <ul class="container-filter categories-filter">
-                    <li>
-                        <a class="categories active" data-filter="*">All</a>
-                    </li>
-                    <li>
-                        <a class="categories" data-filter=".branding">Branding</a>
-                    </li>
-                    <li>
-                        <a class="categories" data-filter=".design">Design</a>
-                    </li>
-                    <li>
-                        <a class="categories" data-filter=".photo">Photo</a>
-                    </li>
-                    <li>
-                        <a class="categories" data-filter=".coffee">coffee</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- End work Filter -->
-            <div class="row container-masonry nf-col-4">
-
-                <div class="nf-item w2x branding coffee spacing">
-                    <div class="item-box">
-                        <a href="assets/images/portfolio3/1.jpg" class="fancylight" data-fancybox-group="light"> <img alt="1" src="assets/images/portfolio3/1.jpg" class="item-container"> </a>
-                        <div class="link-zoom">
-                            <a href="portfolio-single.html" class="project_links"> <i class="fa fa-link"> </i> </a>
-                            <a href="assets/images/portfolio3/1.jpg" class="fancylight popup-btn" data-fancybox-group="light" > <i class="fa fa-search-plus"></i> </a>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="nf-item grid-sizer photo spacing">
-                    <div class="item-box">
-                        <a> <img alt="1" src="assets/images/portfolio3/2.jpg" class="item-container"> </a>
-                        <div class="link-zoom">
-                            <a href="portfolio-single.html" class="project_links"> <i class="fa fa-link"> </i> </a>
-                            <a href="assets/images/portfolio3/2.jpg" class="fancylight popup-btn" data-fancybox-group="light" > <i class="fa fa-search-plus"></i> </a>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="nf-item branding photo spacing">
-                    <div class="item-box">
-                        <a> <img alt="1" src="assets/images/portfolio3/3.jpg" class="item-container"> </a>
-                        <div class="link-zoom">
-                            <a href="portfolio-single.html" class="project_links"> <i class="fa fa-link"> </i> </a>
-                            <a href="assets/images/portfolio3/3.jpg" class="fancylight popup-btn" data-fancybox-group="light" > <i class="fa fa-search-plus"></i> </a>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="nf-item design spacing">
-                    <div class="item-box">
-                        <a> <img alt="1" src="assets/images/portfolio3/4.jpg" class="item-container"> </a>
-                        <div class="link-zoom">
-                            <a href="portfolio-single.html" class="project_links"> <i class="fa fa-link"> </i> </a>
-                            <a href="assets/images/portfolio3/4.jpg" class="fancylight popup-btn" data-fancybox-group="light" > <i class="fa fa-search-plus"></i> </a>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="nf-item photo spacing">
-                    <div class="item-box">
-                        <a> <img alt="1" src="assets/images/portfolio3/5.jpg" class="item-container"> </a>
-                        <div class="link-zoom">
-                            <a href="portfolio-single.html" class="project_links"> <i class="fa fa-link"> </i> </a>
-                            <a href="assets/images/portfolio3/5.jpg" class="fancylight popup-btn" data-fancybox-group="light" > <i class="fa fa-search-plus"></i> </a>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </section>
-    <!--End Contact-->
+    <!--Practice Areas wrapper end-->
 
     <!--Quote and support section-->
     <section class="quote_wrap__block">
