--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
 		<title>RVM Associates</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,800%7CLato:300,400,700" rel="stylesheet" type="text/css">
+        <!-- Favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+        <!-- Styles -->
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,800%7CLato:300,400,700"
+            type="text/css"
+        >
 		<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 		<link href="assets/css/font-awesome.css" rel="stylesheet" type="text/css">
 		<link href="assets/css/plugin/owl.carousel.css" rel="stylesheet" type="text/css">
@@ -15,8 +22,8 @@
 		<link href="assets/css/layers.css" type="text/css" rel="stylesheet" media="screen">
 		<link href="assets/css/style.css" rel="stylesheet">
 		<link href="assets/css/bootsnav2.css" rel="stylesheet">
-		<link href="assets/css/index.css" rel="stylesheet">
-		</head>
+        <link href="assets/css/index.css" rel="stylesheet">
+    </head>
 <body>
     <!--loader-->
     <div id="preloader">
