--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 		<link href="assets/css/style.css" rel="stylesheet">
 		<link href="assets/css/bootsnav2.css" rel="stylesheet">
         <link href="assets/css/index.css" rel="stylesheet">
+
+        <style>
+            .plan-content-box {
+                width: 99%;
+                height: 450px;
+            }
+        </style>
     </head>
 <body>
     <!--loader-->
