--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
         >
 		<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 		<link href="assets/css/font-awesome.css" rel="stylesheet" type="text/css">
-		<link href="assets/css/plugin/owl.carousel.css" rel="stylesheet" type="text/css">
-		<!--Main Slider-->
-		<link href="assets/css/settings.css" type="text/css" rel="stylesheet" media="screen">
-		<link href="assets/css/layers.css" type="text/css" rel="stylesheet" media="screen">
 		<link href="assets/css/style.css" rel="stylesheet">
 		<link href="assets/css/bootsnav2.css" rel="stylesheet">
         <link href="assets/css/index.css" rel="stylesheet">
@@ -452,36 +448,15 @@
             </div>
         </div>
     </footer>
-    <!--Footer Section End-->
-
-    <!-- Site Wraper End -->
     <script src="assets/js/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <!-- Easing Effect Js -->
-    <script src="assets/js/plugin/jquery.easing.js" type="text/javascript"></script>
-    <!-- bootstrap Js -->
     <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- fancybox Js -->
-    <script src="assets/js/jquery.mousewheel-3.0.6.pack.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.fancybox.pack.js" type="text/javascript"></script>
-    <!-- carousel Js -->
-    <script src="assets/js/plugin/owl.carousel.js" type="text/javascript"></script>
-    <!-- imagesloaded Js -->
-    <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
+    <script src="assets/js/owl.carousel.js" type="text/javascript"></script>
+
     <!-- masonry,isotope Effect Js -->
     <script src="assets/js/imagesloaded.pkgd.min.js" type="text/javascript"></script>
     <script src="assets/js/isotope.pkgd.min.js" type="text/javascript"></script>
     <script src="assets/js/masonry.pkgd.min.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.appear.js" type="text/javascript"></script>
-    <!-- parallax Js -->
-    <script src="assets/js/jquery.parallax-1.1.3.js" type="text/javascript"></script>
-    <!-- revolution Js -->
-    <script type="text/javascript" src="assets/js/jquery.themepunch.tools.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.themepunch.revolution.min.js"></script>
-    <script type="text/javascript" src="assets/extensions/revolution.extension.slideanims.min.js"></script>
-    <script type="text/javascript" src="assets/extensions/revolution.extension.layeranimation.min.js"></script>
-    <script type="text/javascript" src="assets/extensions/revolution.extension.navigation.min.js"></script>
-    <script type="text/javascript" src="assets/extensions/revolution.extension.parallax.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.revolution.js"></script>
+
     <!-- custom Js -->
     <script src="assets/js/custom.js" type="text/javascript"></script>
 </body>
