--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 </div>
             </div>
         </div>
+
         <div class="main_nav stricky-header__top">
             <nav class="navbar navbar-default navbar-sticky bootsnav">
                 <div class="container">
@@ -164,27 +165,31 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-responsive" src="assets/images/rvm-associates.webp" alt="Photo">
+                    <img class="img-responsive"
+                        src="assets/images/rvm-associates.webp"
+                        alt="RVM associates Logo"
+                    >
                 </div>
             </div>
         </div>
     </div>
 
-    <!--Availablity Section start-->
+    <!--Testimonials Section start-->
     <section class="available_wrap__block mb-45">
         <div class="available_content__block text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <h2>Testimonials</h2>
-                        <p> "Priority of our firm is to fulfil all the requirements of the client." - RVM & Associates
-
-                        </p> </div>
+                        <p>
+                            "Priority of our firm is to fulfil all the requirements of the client." - RVM & Associates
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--Availablity Section end-->
+    <!--Testimonials Section end-->
 
     <!--Practice Areas wrapper start-->
     <section class="plaing_wrap__block padding ptb-xs-60">
@@ -347,7 +352,10 @@
                             <input type="text" placeholder="Your Name*">
                             <input type="text" placeholder="Email Address*">
                             <input type="text" placeholder="Phone*">
-                            <textarea  cols="30" rows="10" placeholder="Type Your Message hear..."></textarea>
+                            <textarea  cols="30"
+                                rows="10"
+                                placeholder="Type Your Message hear..."
+                            ></textarea>
                             <input type="submit" id="submit">
                         </form>
                     </div>
@@ -363,9 +371,13 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="widget widget_text">
-                        <h2 class="widget-title"><span>ABOUT US</span></h2>
+                        <h2 class="widget-title">
+                            <span>ABOUT US</span>
+                        </h2>
                         <div class="textwidget">
-                            <a href="index1.html" class="footer-logo"> <img src="assets/images/footer-logo.png" alt="Awesome Logo"> </a>
+                            <a href="index1.html" class="footer-logo">
+                                <img src="assets/images/footer-logo.png" alt="Awesome Logo">
+                            </a>
                             <p>
                                     We are capable enough to provide the below mentioned services to our clients with all the experiences and knowledge we have gained.
                             </p>
@@ -397,9 +409,11 @@
                         <ul>
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
-                                <span class="text">43, 2nd Floor,
+                                <span class="text">
+                                        43, 2nd Floor,
                                         Star Shopping Centre,
-                                        Dr. Yagnik Road, Rajkot.-360001</span>
+                                        Dr. Yagnik Road, Rajkot.-360001
+                                </span>
                             </li>
                             <li class="phone clearfix">
                                 <span class="hl">Phone:</span>
@@ -414,9 +428,11 @@
                         <ul>
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
-                                <span class="text">404, 4th Floor
+                                <span class="text">
+                                        404, 4th Floor
                                         Mardia Plaza - A wing
-                                        C.G.Road, Ahmedabad.-380009 </span>
+                                        C.G.Road, Ahmedabad.-380009
+                                </span>
                             </li>
                             <li class="phone clearfix">
                                 <span class="hl">Phone:</span>
@@ -430,9 +446,15 @@
                     </div>
                     <div class="widget widget_socials">
                         <div class="socials">
-                            <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
-                            <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-                            <a target="_blank" href="#"><i class="fa fa-linkedin"></i></a>
+                            <a target="_blank" href="#">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                            <a target="_blank" href="#">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                            <a target="_blank" href="#">
+                                <i class="fa fa-linkedin"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
