--- a/index.html
+++ b/index.html
@@ -61,13 +61,6 @@
                             Welcome to our corporate buisness
                         </p>
                     </div>
-                    <div class="col-sm-5">
-                        <div class="social-link__block text-right">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -468,19 +461,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="widget widget_socials">
-                        <div class="socials">
-                            <a target="_blank" href="#">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <a target="_blank" href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a target="_blank" href="#">
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                        </div>
-                    </div>
+                    <div class="widget widget_socials"></div>
                 </div>
             </div>
         </div>
