--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="row">
                     <div class="col-sm-7">
                         <p>
-                            Welcome to our corporate buisness
+                            Welcome to our corporate services
                         </p>
                     </div>
                 </div>
@@ -68,24 +68,31 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="logo">
-                            <a href="#home">
-                                <img src="assets/images/logo.png" alt="Logo">
-                            </a>
+                        <div class="logo" style="color: white; line-height: 90px; height: 98px; font-family: 'Times New Roman', Times, serif;">
+                            <span style="font-size: 50px;">
+                                RVM
+                            </span>
+                            <span style="font-size: 24px;">
+                                & Associates
+                            </span>
                         </div>
                     </div>
                     <div class="col-md-8">
                         <div class="top-info__block text-right">
                             <ul>
                                 <li>
-                                    <i class="fa fa-map-marker"></i>
+                                    <a href="https://goo.gl/maps/DYaCHMroUfikHKnF9" target="_blank">
+                                        <i class="fa fa-map-marker"></i>
+                                    </a>
                                     <p>
                                         Rajkot
                                         <span> <a href="tel:+919099142981">+91 90991 42981</a></span>
                                     </p>
                                 </li>
                                 <li>
-                                    <i class="fa fa-map-marker"></i>
+                                    <a href="https://goo.gl/maps/UFW4hX5ETSMqYQsWA" target="_blank">
+                                        <i class="fa fa-map-marker"></i>
+                                    </a>
                                     <p>
                                         Ahmedabad
                                         <span><a href="tel:+918866664845">+91 88666 64845</a></span>
@@ -234,14 +241,12 @@
                                         <li>Filing of form 15CA/CB</li>
                                         <li>Lower TDS Certificate</li>
                                         <li>Timely Response to Income Tax Authorities</li>
+                                        <li>Application of PAN​/TAN</li>
                                     </ul>
                                 </li>
-                                <li>
-                                    Other Income Tax Related Compliance
-                                    <ul>
-                                        <li>Application of PAN​</li>
-                                    </ul>
-                                </li>
+                            </ul>
+                            <ul>
+                                <li>Other Income Tax Related Compliance</li>
                             </ul>
                         </div>
                     </div>
@@ -361,11 +366,11 @@
                 <div class="col-sm-6 col-md-5 no-padding">
                     <div class="quote__block ptb-80">
                         <h2>Send us a message</h2>
-                        <form action="" method="">
-                            <input type="text" placeholder="Your Name*">
-                            <input type="text" placeholder="Email Address*">
-                            <input type="text" placeholder="Phone*">
-                            <textarea  cols="30"
+                        <form action="https://formspree.io/rvm.rajkot@gmail.com" method="POST">
+                            <input name="name" type="text" placeholder="Your Name*" required>
+                            <input name="email" type="email" placeholder="Email Address">
+                            <input name="phone" type="text" placeholder="Phone*" required>
+                            <textarea name="message" cols="30"
                                 rows="10"
                                 placeholder="Type Your Message hear..."
                             ></textarea>
@@ -379,7 +384,7 @@
     <!--Quote and support section end-->
 
     <!--Footer Section Start-->
-    <footer id="footer">
+    <footer id="footer" style="padding-bottom: 60px;">
         <div id="footer-widgets" class="container style-1">
             <div class="row">
                 <div class="col-md-4">
@@ -388,36 +393,10 @@
                             <span>ABOUT US</span>
                         </h2>
                         <div class="textwidget">
-                            <a href="#home" class="footer-logo">
-                                <img src="assets/images/footer-logo.png"
-                                    alt="Awesome Logo"
-                                >
-                            </a>
                             <p>
                                 We are capable enough to provide the below mentioned services to our clients with all the experiences and knowledge we have gained.
                             </p>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="widget widget_links">
-                        <h2 class="widget-title">
-                            <span>COMPANY LINKS</span>
-                        </h2>
-                        <ul class="wprt-links clearfix col2">
-                            <li>
-                                <a href="#home">Home</a>
-                            </li>
-                            <li>
-                                <a href="#about-section">Who We Are</a>
-                            </li>
-                            <li>
-                                <a href="#practice-area">Practice Area</a>
-                            </li>
-                            <li>
-                                <a href="#contact">Contact</a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -441,8 +420,12 @@
                                 <span class="text">rvm.rajkot@gmail.com</span>
                             </li>
                         </ul>
-                        <hr>
-                        <ul>
+                    </div>
+                    <div class="widget widget_socials"></div>
+                </div>
+                <div class="col-md-4">
+                    <div class="widget widget_information">
+                        <ul style="margin-top: 70px;">
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
