--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="middel-part__block">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 logo-design">
                         <div class="logo" style="color: white; line-height: 90px; height: 98px; font-family: 'Times New Roman', Times, serif;">
                             <span style="font-size: 50px;">
                                 RVM
