text: Update address

--- a/index.html
+++ b/index.html
@@ -429,9 +429,9 @@
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
-                                        404, 4th Floor
-                                        Mardia Plaza - A wing
-                                        C.G.Road, Ahmedabad.-380009
+                                    Jashvant Co-operative Housing Society
+				    Near Mansi Circle,
+				    Bodakdev, Ahmedabad.
                                 </span>
                             </li>
                             <li class="phone clearfix">
