fix: line break

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
-                                    Jashvant Co-operative Housing Society
+                                    Jashvant Co-operative Housing Society<br />
 				    Near Mansi Circle,
 				    Bodakdev, Ahmedabad.
                                 </span>
