--- a/index.html
+++ b/index.html
@@ -406,9 +406,10 @@
                             <li class="address clearfix">
                                 <span class="hl">Address:</span>
                                 <span class="text">
-                                        43, 2nd Floor,
-                                        Star Shopping Centre,
-                                        Dr. Yagnik Road, Rajkot.-360001
+					#509, Fifth Floor,
+					Nakshatra-VIII,
+					Near Sun City, Sadhuvaswani Road,
+					Rajkot - 360005
                                 </span>
                             </li>
                             <li class="phone clearfix">
